# duck_engine

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  PLAN.md  vcpkg.json
assets/maps/: tutorial_map.json
docs/: know.md
docs/plans/: 2026-02-21-phase1-design.md  2026-02-21-phase1-implementation.md  2026-02-23-phase2-design.md  2026-02-23-phase3-design.md
src/: main.cpp
src/core/: Engine.cpp  Engine.h  MapLoader.cpp  MapLoader.h  SimpleJson.h
src/ecs/: ComponentPool.h  Components.h  Entity.h  Registry.cpp  Registry.h
src/platform/: Input.cpp  Input.h  Window.cpp  Window.h
src/renderer/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  SpriteBatch.cpp  SpriteBatch.h  Texture.cpp  Texture.h
src/systems/: CollisionSystem.cpp  CollisionSystem.h  EnemySystem.cpp  EnemySystem.h  MovementSystem.cpp  MovementSystem.h  PickupSystem.cpp  PickupSystem.h  RenderSystem.cpp  RenderSystem.h  WeaponSystem.cpp  WeaponSystem.h
tests/: test_collision.cpp  test_content.cpp  test_ecs.cpp  test_enemy.cpp
